fix homepage loading overflow issue

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -16,6 +16,7 @@
   justify-items: center;
   gap: 2rem;
   padding: 2rem 10rem;
+  overflow: hidden;
 
   @media screen and (max-width: 50em) {
     padding: 2rem 4rem;
